public/styles/new-tweet.css
.new-tweet {
  display:flex;
  flex-direction: column;
  width: 90%;
  background-color:#f4f1ec;
  font-family: sans-serif;
}
.new-tweet form {
  display: flex;
  flex-direction: column;
}

textarea {
  background-color: #f4f1ec;
  border: hidden;
  border-bottom: 3px solid black;
  margin-bottom: 5px;
}

.new-tweet div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.new-tweet button {  
  background-color: #4056A1;
  color: white;
  border-style:groove;
  font-weight: bolder;
  font-family: 'Bungee', sans-serif;
  font-size: 24px;
  margin-top: 5px; 
}

.new-tweet output {
  font-family: "Bungee", sans-serif;
  font-size: 24px;
  margin-top: 5px;

}
.new-tweet button:hover {  
  background-color: lightsteelblue;
}

.invalid {
  color: red
}

